# CLM-framework

./: .gitignore  .gitignore.orig  .travis.yml  CLM_framework.sln  CLM_framework_vs2012.sln  CLM_framework_vs2013.sln  CMakeLists.txt  Copyright.txt  OpenFace.sln  README.md  Readme.txt  Readme_action_units.txt  Readme_gaze.txt  SimpleCLM140816.vspx  readme-ubuntu.txt
avatars/old/: shape_central.yml  shape_central_cag.yml  shape_central_clo.yml  shape_central_ero.yml  shape_central_jak.yml  shape_central_jol.yml  shape_central_oba.yml  shape_central_old.yml
cmake/modules/: FindTBB.cmake
exe/CLM-framework-GUI/: AVPlot.xaml  AVPlot.xaml.cs  App.xaml  App.xaml.cs  AxesBorder.cs  BarGraph.xaml  BarGraph.xaml.cs  BarGraphHorizontal.xaml  BarGraphHorizontal.xaml.cs  CLM-framework-GUI.csproj  CLM-framework-GUI_vs2012.csproj  CLM-framework-GUI_vs2013.csproj  CameraSelection.xaml  CameraSelection.xaml.cs  FpsTracker.cs  MainWindow.xaml  MainWindow.xaml.cs  MultiBarGraph.xaml  MultiBarGraph.xaml.cs  MultiBarGraphHorz.xaml  MultiBarGraphHorz.xaml.cs  OverlayImage.xaml  OverlayImage.xaml.cs  PCMPlot.xaml  PCMPlot.xaml.cs  SimpleImage.xaml  SimpleImage.xaml.cs  TextEntryWindow.xaml  TextEntryWindow.xaml.cs  TimeSeriesPlot.xaml  TimeSeriesPlot.xaml.cs
exe/ConsolePuppets/: ConsolePuppets.cpp  ConsolePuppets.h  ConsolePuppets.vcxproj  ConsolePuppets.vcxproj.filters
exe/FaceLandmarkImg/: CMakeLists.txt  FaceLandmarkImg.cpp  FaceLandmarkImg.vcxproj
exe/FaceLandmarkVid/: CMakeLists.txt  FaceLandmarkVid.cpp  FaceLandmarkVid.vcxproj
exe/FaceLandmarkVidMulti/: CMakeLists.txt  FaceLandmarkVidMulti.cpp  FaceLandmarkVidMulti.vcxproj
exe/FaceTrackingVid/: FaceTrackingVid.cpp  FaceTrackingVid.vcxproj
exe/FaceTrackingVidMulti/: FaceTrackingVidMulti.cpp  FaceTrackingVidMulti.vcxproj
exe/FeatureExtraction/: CMakeLists.txt  FeatureExtraction.cpp  FeatureExtraction.vcxproj  FeatureExtraction_vs2012.vcxproj  FeatureExtraction_vs2013.vcxproj
exe/HeadPose-file/: HeadPose-file.csproj  HeadPose-file_vs2012.csproj  HeadPose-file_vs2013.csproj  Liability.xaml  Liability.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SelectFiles.xaml  SelectFiles.xaml.cs  instructions.txt
exe/HeadPose-live/: App.xaml.cs  HeadPose-live.csproj  HeadPose-live_vs2012.csproj  HeadPose-live_vs2013.csproj  Liability.xaml  Liability.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  TextEntryWindow.xaml  TextEntryWindow.xaml.cs
exe/MultiTrackCLM/: CMakeLists.txt  MultiTrackCLM.cpp  MultiTrackCLM.vcxproj  MultiTrackCLM_vs2012.vcxproj  MultiTrackCLM_vs2012.vcxproj.filters  MultiTrackCLM_vs2013.vcxproj
exe/Ophthalm-experiments/: App.xaml  HeadPose-live.csproj  Liability.xaml  Liability.xaml.cs  MainWindow.xaml  (+4 more)
exe/SimpleCLM/: CMakeLists.txt  FaceTrackingVid.cpp  SimpleCLM.cpp  SimpleCLM.vcxproj  SimpleCLM.vcxproj.filters  SimpleCLM_vs2012.vcxproj  SimpleCLM_vs2013.vcxproj
exe/SimpleCLMImg/: CMakeLists.txt  SimpleCLMImg.cpp  SimpleCLMImg.vcxproj  SimpleCLMImg_vs2012.vcxproj  SimpleCLMImg_vs2013.vcxproj
hms/: extract_summary_features_both.m  extract_summary_features_doc.m  extract_summary_features_pat.m  hms.m  scales.mat
lib/local/FaceAnalyser/: CMakeLists.txt  FaceAnalyser.vcxproj  FaceAnalyser.vcxproj.filters  FaceAnalyser_vs2010.vcxproj  FaceAnalyser_vs2012.vcxproj  FaceAnalyser_vs2013.vcxproj
lib/local/FaceAnalyser/AU_predictors/: AU_SVM_BP4D_best.txt  AU_SVM_SEMAINE_best.txt  AU_SVM_SEMAINE_dyn.txt  AU_SVM_SEMAINE_stat.txt  AU_all_SVM_simple_dyn.txt  AU_all_SVM_simple_stat.txt  AU_all_best.txt  AU_all_static.txt
lib/local/FaceAnalyser/include/: FaceAnalyser.cpp  FaceAnalyser.h  Face_utils.h  GazeEstimation.h  RapportAnalyser.h  SVM_dynamic_lin.h  SVM_static_lin.h  SVR_dynamic_lin_regressors.h  SVR_static_lin_regressors.h
lib/local/FaceAnalyser/rapport_config/: config.txt
lib/local/FaceAnalyser/src/: FaceAnalyser.cpp  Face_utils.cpp  GazeEstimation.cpp  RaportAnalyser.cpp  SVM_dynamic_lin.cpp  SVM_static_lin.cpp  SVR_dynamic_lin_regressors.cpp  SVR_static_lin_regressors.cpp
lib/local/LandmarkDetector/: CMakeLists.txt  LandmarkDetector.vcxproj  LandmarkDetector.vcxproj.filters
lib/local/LandmarkDetector/include/: CCNF_patch_expert.h  LandmarkCoreIncludes.h  LandmarkDetectionValidator.h  LandmarkDetectorFunc.h  LandmarkDetectorModel.h  LandmarkDetectorParameters.h  LandmarkDetectorUtils.h  PAW.h  PDM.h  Patch_experts.h  SVR_patch_expert.h  stdafx.h
lib/local/LandmarkDetector/model/: main_clm-z.txt  main_svr_wild.txt
lib/local/LandmarkDetector/model/model_eye/: main_ccnf_synth_left.txt
lib/local/LandmarkDetector/src/: CCNF_patch_expert.cpp  LandmarkDetectionValidator.cpp  LandmarkDetectorFunc.cpp  LandmarkDetectorModel.cpp  LandmarkDetectorParameters.cpp  LandmarkDetectorUtils.cpp  PAW.cpp  PDM.cpp  Patch_experts.cpp  SVR_patch_expert.cpp
matlab_runners/: Full_test_suite.m  Read_HOG_files.m  Readme.txt  Run_CLM_fitting_on_images.m  calcBUerror.m  calcBiwiError.m  calcIctError.m  compute_error.m  evaluate_au_prediction_results.m  extract_DISFA_features.m  extract_FERA_features.m  feature_extraction_demo.m  feature_extraction_demo_img_seq.m  feature_extraction_demo_vid.m  run_AU_prediction_DISFA.m  run_biwi_experiment_clm.m  run_bu_experiment_clm.m  run_clm_feature_point_tests_wild.m  run_clm_head_pose_tests_clnf.m  run_clm_head_pose_tests_svr.m  run_demo_images.m  run_demo_video.m  run_demo_video_multi.m  run_ict_experiment_clm.m  run_yt_dataset.m  work_out_correlations.asv  work_out_correlations.m  work_out_errors_1D.m
matlab_version/: readme.txt
python_scripts/: testing_head_pose.py
videos/: 0188_03_021_al_pacino.avi  0217_03_006_alanis_morissette.avi  0244_03_004_anderson_cooper.avi  0294_02_004_angelina_jolie.avi  0417_02_003_bill_clinton.avi  0490_03_007_bill_gates.avi  0686_02_003_gloria_estefan.avi  1034_03_006_jet_li.avi  1192_01_006_julia_roberts.avi  1461_01_021_noam_chomsky.avi  1804_03_006_sylvester_stallone.avi  1815_01_008_tony_blair.avi  1869_03_009_victoria_beckham.avi  1878_01_002_vladimir_putin.avi  2015-10-15-15-14.avi  Video 14.wmv  changeLighting.wmv  default.wmv  multi_face.avi
(+735 files in other folders)
